Seance, salle and fixes
