# storage/docs/api-docs.json
@@ -1098,6 +1098,141 @@
                 }
             }
         },
+        "/salle/{salleId}": {
+            "get": {
+                "tags": [
+                    "salle"
+                ],
+                "summary": "Show 1 row",
+                "description": "Show one row",
+                "operationId": "getSalleById",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "salleId",
+                        "in": "path",
+                        "description": "ID of salle that needs to be fetched",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Salle"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Salle not found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "salle"
+                ],
+                "summary": "Update an existing seance",
+                "description": "",
+                "operationId": "update seance",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "numero_salle",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "nom_salle",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "etage_salle",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": false,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "places",
+                        "in": "formData",
+                        "description": "the fields you want to update",
+                        "required": false,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Invalid ID supplied",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Salle"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Salle not found"
+                    }
+                },
+                "security": [
+                    {
+                        "petstore_auth": [
+                            "write:salles",
+                            "read:salles"
+                        ]
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "salle"
+                ],
+                "summary": "Delete salle by id",
+                "operationId": "deleteSeance",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "salleId",
+                        "in": "path",
+                        "description": "ID of the reduction that needs to be deleted",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "Order not found"
+                    }
+                }
+            }
+        },
         "/seance": {
             "get": {
                 "tags": [
@@ -1484,6 +1619,47 @@
             },
             "xml": {
                 "name": "Salles"
+            }
+        },
+        "Seance": {
+            "required": true,
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "id_film": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "id_salle": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "id_personne_ouvreur": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "id_personne_technicien": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "id_personne_menage": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "debut_seance": {
+                    "type": "date",
+                    "default": "2011-01-12"
+                },
+                "fin_seance": {
+                    "type": "date",
+                    "format": "date",
+                    "default": "2011-01-12"
+                }
+            },
+            "xml": {
+                "name": "Seances"
             }
         }
     }
